tests/incomplete-num-constant/out.txt
error: incomplete numeric constant
  ┌─ err.sml:1:9
  │
1 │ val _ = 0x
  │         ^^

lexing failed
